--- a/inst/szablony_raportow/adm_lo_1rokpo.Rmd
+++ b/inst/szablony_raportow/adm_lo_1rokpo.Rmd
@@ -127,7 +127,7 @@ if (szk$S3_12[[1]]$n >= progLiczebnosci) {
     sep = ""
   )
 } else {
-  cat("Liczba absolwentów Państwa szkoły nie była wystarczająca, żeby możliwe było przedstawienie wyników zgodnie z zasadą chroniącą anonimowość absolwentów.")
+  cat("Liczba absolwentów Państwa szkoły nie była wystarczająca, żeby możliwe było przedstawienie wyników zgodnie z zasadą chroniącą anonimowość absolwentów.")
 }
 ```
 
@@ -265,6 +265,8 @@ if (szk$S3_12[[1]]$n >= progLiczebnosci) {
     " Bardziej szczegółowe wyniki, uwzględniające również to, czy absolwenci się uczyli, przedstawia poniższy wykres.\n\n",
     sep = ""
   )
+} else {
+  cat("Liczba absolwentów Państwa szkoły nie była wystarczająca, żeby możliwe było przedstawienie wyników zgodnie z zasadą chroniącą anonimowość absolwentów.")
 }
 ```
 
